--- a/appTest.html
+++ b/appTest.html
@@ -1,54 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="globals.css" />
-    <link rel="stylesheet" href="style.css" />
+    <title>Text to Image</title>
+    <style>
+      /* CSS for styling images */
+      img {
+        margin: 10px; /* Add spacing around each image */
+        border: 2px solid #333; /* Add a border to the images */
+      }
+      /* CSS for the image container */
+      .image-container {
+        display: flex; /* Display images in a row */
+        flex-wrap: wrap; /* Wrap images to the next line if there's not enough space */
+      }
+    </style>
   </head>
   <body>
-    <div class="welcome-page">
-      <div class="overlap-wrapper">
-        <div class="overlap">
-          <div class="overlap-group">
-            <p class="text-wrapper">Book of Art was created .....</p>
-            <img class="vector" src="img/vector-6.svg" />
-            <img class="img" src="img/vector-4-1.svg" />
-            <img class="vector-2" src="img/vector-5-1.svg" />
-            <img class="vector-3" src="img/vector-7-1.svg" />
-            <img class="vector-4" src="img/vector-8-1.svg" />
-            <div class="div">Welcome!</div>
-            <img class="group" src="img/group-1.png" />
-            <img class="group-2" src="img/group.png" />
-            <img class="frame" src="img/frame-1.png" />
-            <div class="rectangle"></div>
-            <div class="nav-nav-menu">
-              <div class="nav-list-item">
-                <div class="list-item">about</div>
-              </div>
-              <div class="list-item-wrapper">
-                <div class="list-item">creators</div>
-              </div>
-              <div class="nav-list-item">
-                <div class="list-item">contact</div>
-              </div>
-            </div>
-            <div class="group-3">
-              <img class="book-of-art" src="img/book-of-art.png" />
-              <div class="group-4"></div>
-            </div>
-            <img class="hackgt-logo" src="img/hackgt-logo-1.png" />
-          </div>
-          <div class="overlap-2">
-            <img class="vector-5" src="img/vector-8.svg" />
-            <img class="vector-6" src="img/vector-7.svg" />
-          </div>
-          <div class="overlap-group-2">
-            <img class="vector-7" src="img/vector-5.svg" />
-            <img class="vector-8" src="img/vector-4.svg" />
-            <img class="vector-9" src="img/vector-3.svg" />
-            <img class="vector-10" src="img/vector-2.svg" />
-          </div>
-        </div>
-      </div>
+    <h1>Enter Text to Generate Image</h1>
+    <form method="POST">
+      <input type="text" name="user_text[]" placeholder="Enter Beginning" />
+      <input type="text" name="user_text[]" placeholder="Enter Middle" />
+      <input type="text" name="user_text[]" placeholder="Enter End" />
+      <div class="Image2"></div>
+      <input type="submit" value="Generate Image" />
+    </form>
+    {% if image_urls %}
+    <div class="image-container">
+      {% for image_url in image_urls %}
+      <img src="{{ image_url }}" alt="Generated Image" />
+      {% endfor %}
     </div>
+    {% endif %}
   </body>
 </html>
